[project]
name = "quantiloon"
version = "0.1.0"
description = "Baseline + API scaffold"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "torch==2.3.1",
  "transformers==4.43.2",
  "scikit-learn==1.5.1"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
